--- a/project/source/requirements.txt
+++ b/project/source/requirements.txt
@@ -13,6 +13,7 @@ MarkupSafe==1.1.1
 numpy==1.16.2
 openapi-spec-validator==0.2.6
 pathlib==1.0.1
+Pillow==5.4.1
 PyYAML==3.13
 requests==2.21.0
 scikit-learn==0.20.3
