--- a/project/source/requirements.txt
+++ b/project/source/requirements.txt
@@ -3,17 +3,22 @@ chardet==3.0.4
 Click==7.0
 clickclick==1.2.2
 connexion==2.2.0
+cycler==0.10.0
 Flask==1.0.2
 idna==2.8
 inflection==0.3.1
 itsdangerous==1.1.0
 Jinja2==2.10
 jsonschema==2.6.0
+kiwisolver==1.0.1
 MarkupSafe==1.1.1
+matplotlib==3.0.3
 numpy==1.16.2
 openapi-spec-validator==0.2.6
 pathlib==1.0.1
 Pillow==5.4.1
+pyparsing==2.3.1
+python-dateutil==2.8.0
 PyYAML==3.13
 requests==2.21.0
 scikit-learn==0.20.3
