--- a/project-code/requirements.txt
+++ b/project-code/requirements.txt
@@ -19,7 +19,7 @@ pathlib==1.0.1
 Pillow==5.4.1
 pyparsing==2.3.1
 python-dateutil==2.8.0
-PyYAML==3.13
+PyYAML>=4.2b1
 requests==2.21.0
 scikit-learn==0.20.3
 scipy==1.2.1
