--- a/rest/rest1/requirements.txt
+++ b/rest/rest1/requirements.txt
@@ -12,7 +12,7 @@ jsonschema==2.6.0
 MarkupSafe==1.1.0
 numpy==1.16.1
 openapi-spec-validator==0.2.4
-PyYAML==3.13
+PyYAML>=4.2b1
 requests==2.21.0
 scikit-learn==0.20.2
 scipy==1.2.0
