--- a/project-code/requirements.txt
+++ b/project-code/requirements.txt
@@ -8,7 +8,7 @@ Flask==1.0.2
 idna==2.8
 inflection==0.3.1
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2>=2.10
 jsonschema==2.6.0
 kiwisolver==1.0.1
 MarkupSafe==1.1.1
