--- a/rest/rest1/requirements.txt
+++ b/rest/rest1/requirements.txt
@@ -7,7 +7,7 @@ Flask==1.0.2
 idna==2.8
 inflection==0.3.1
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2>=2.10
 jsonschema==2.6.0
 MarkupSafe==1.1.0
 numpy==1.16.1
