--- a/README.yml
+++ b/README.yml
@@ -8,5 +8,5 @@ owner:
 project:
   - title: "Spam Analysis with Spamalot"
     url: "https://github.com/cloudmesh-community/sp19-222-101/blob/master/project-report/report.md"
-    code: "https://github.com/cloudmesh-community/sp19-222-101/blob/master/project-report/report.md"
+    code: "https://github.com/cloudmesh-community/sp19-222-101/tree/master/project-code"
     keywords: "Spam"
