--- a/project-code/Dockerfile
+++ b/project-code/Dockerfile
@@ -1,10 +1,10 @@
 FROM ubuntu:latest
 
-RUN apt update
-RUN apt install python3
-RUN apt install python3-pip
-RUN apt install git-core
-RUN python -m pip install
+RUN apt update -y
+RUN apt install python3 -y
+RUN apt install python3-pip -y
+RUN apt install git-core -y
+RUN python -m pip install -y
 
 RUN git clone https://github.com/cloudmesh-community/sp19-222-101.git
 
