Updated Dockerfile and Makefile

--- a/project-code/Dockerfile
+++ b/project-code/Dockerfile
@@ -1,12 +1,35 @@
 FROM ubuntu:latest
+MAINTAINER Eric Bower <epbower@iu.edu>
 
-RUN apt update -y
-RUN apt install python3 -y
-RUN apt install python3-pip -y
-RUN apt install git-core -y
-RUN python -m pip install -y
+RUN apt-get update -y
+RUN apt-get install -y apt-utils
+
+RUN apt-get install -y build-essential libssl-dev
+
+RUN apt-get install -y git-core
+RUN apt-get install -y dnsutils
+RUN apt-get install -y curl
+RUN apt install -y python3.7
+
+RUN update-alternatives --install /usr/bin/python python /usr/bin/python3.7 10
+RUN update-alternatives --config python
+
+RUN apt-get install -y python3.7-distutils
+RUN apt-get install -y python3.7-dev
+
+
+RUN curl -s https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+RUN python get-pip.py 
+
+RUN pip install -U pip setuptools
+RUN pip install psutil
 
 RUN git clone https://github.com/cloudmesh-community/sp19-222-101.git
 
-WORKDIR /sp19-222-101
+WORKDIR sp19-222-101/
 
+EXPOSE 8080
+
+RUN make start
+
+CMD ["make", "start"]
