--- a/project-code/Makefile
+++ b/project-code/Makefile
@@ -35,6 +35,8 @@ docker-remove:
 	@echo "removing the image"
 	docker rmi -f sp19-222-101/spam
 	@echo "image removed"
+	docker ps -a > dockerContainers
+	python remove_container.py
 
 docker-clean: docker-stop docker-remove
 	@echo "DONE"
